style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    
}
body {
    background-color: #780000;
    height: 100vh;
    display: flex;
}
div {
    display: inline-block;
}
main {
    display: flex;
    width: 100%;
    color: #C1121F;
    flex-direction: column;
}
iframe {
    display: flex;
    
}
header {
    text-align: center;
    margin: 30px 5%;
    background-color: #FDF0D5;
    border-radius: 25px;
    min-width: 300px;
}

#sidebarframe {
    width: 100px;
    border: 0;
    position: fixed;
}

#sidebarframe.extended {
    width: 200px;
}
#sidebardiv {
    width: 100px;
    border: 0;
    display: flex;
    min-width: 100px;
}
#sidebardiv.extended {
    width: 200px;
    display: flex;
    min-width: 200px;
}

.sidebar.extended {
    height: 100%;
    border-style: solid;
    border-width: 0 1px 0 0;
    width: 200px;
    position: fixed;
}
.sidebar {
    height: 100%;
    border-style: solid;
    border-width: 0 1px 0 0;
    width: 100px;
    position: fixed;
    background-color: #003049;
}

.logo.extended{
    border: solid 1px black;
    margin: 15px auto;
    display: block;
    width: 150px;
}
.sidebarbox {
    border: solid 1px black;
    margin: 4px auto;
    display: block;
    width: 90px;
    height: 90px;
    background-color: #669BBC;
}
.sidebarbox.extended {
    border: solid 1px black;
    margin: 4px auto;
    display: block;
    width: 190px;
    height: 190px;
}
.sidebarbtn {
    height: 99px;
    width: 100px;
    border: solid black;
    border-width: 0 0 1px 0;
    display: flex;    
}
.sidebarbtn.extended {
    height: 199px;
    width: 200px;
    border: solid black;
    border-width: 0 0 1px 0;    
}
.sidebartext {
    margin-top: 60%;
    text-align: center;
}
.logo {
    width: 88px
}
.extendbtn {
    display: block;
    border: solid black;
    border-width: 1px 0 0 0;
    height: 180px;
    width: 100px;
    position: absolute;
    top: 95%;
    bottom: 100%;
    padding: 5px;
    text-align: center;
    background-color: #669BBC;
}
.extendbtn.extended {
    display: block;
    border: solid black;
    border-width: 1px 0 0 0;
    height: 180px;
    width: 200px;
    position: absolute;
    top: 95%;
    bottom: 100%;
    padding: 5px;
    text-align: center;
}
.subheader {
    text-align: center;
    margin: 10px 25%;
    background-color: #FDF0D5;
    border-radius: 25px;
    max-width: 500px;
    min-width: 300px;
    align-self: center;
    padding: 0 10px;
}
.content {
    width: 100%;
    height: 100%;
    align-content: flex-start;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 50px;
}
.boxtype1 {
    background-color: #FDF0D5;
    height: 500px;
    width: 350px;
    margin: 5px 1%;
    border-radius: 25px;
    display: flex;
    min-width: 300px;
    flex-direction: column;
}
.imgbox {
    width: 100%;
    height: 65%;
}
.infobox {
    border-width: 1px 0 0 0;
    border-style: solid;
    width: 100%;
    height: 35%;
    display: flex;
    flex-direction: row;
}
.infotext {
    margin: 2px 5px;
    width: 100%;
}
.boxbutton {
    width: 30%;
    height: 30%;
    margin: 0 3px 0 0;
    border: 1px solid #003049;
    border-radius: 10px;
    float: right;
    background-color:#669BBC;
    color:#C1121F;
    align-content: center;
}

